--- a/SearchShot/SearchShot/HowToPage.xaml
+++ b/SearchShot/SearchShot/HowToPage.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage
-    x:Class="SearchShot.Accueil"
+    x:Class="SearchShot.HowToPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -25,20 +25,17 @@
         <!--TitlePanel contient le nom de l'application et le titre de la page-->
         <StackPanel Grid.Row="0" Margin="12,17,0,28">
             <TextBlock Text="SearchShot" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock Text="Accueil" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock Text="Comment Jouer ?" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
         <!--ContentPanel - placez tout contenu supplémentaire ici-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            <Button x:Name="BtnJouer" Content="Jouer" HorizontalAlignment="Left" Margin="125,39,0,0" VerticalAlignment="Top" Width="225" Click="BtnJouer_Click"/>
-            <Button x:Name="BtnClassement" Content="Classement" HorizontalAlignment="Left" Margin="125,111,0,0" VerticalAlignment="Top" Width="225" Click="BtnClassement_Click"/>
-            <Button x:Name="BtnOptions" Content="Options" HorizontalAlignment="Left" Margin="125,252,0,0" VerticalAlignment="Top" Width="225" Click="BtnOptions_Click"/>
-            <Button x:Name="BtnAmis" Content="Amis" HorizontalAlignment="Left" Margin="125,180,0,0" VerticalAlignment="Top" Width="225" Click="BtnAmis_Click"/>
-            <Button x:Name="BtnDeconnexion" Content="Deconnexion" HorizontalAlignment="Left" Margin="125,473,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.496,-0.153" Width="225" Click="BtnDeconnexion_Click"/>
-            <Button Name="HowToButton" Content="Comment Jouer" Margin="125,324,106,210" Click="HowToButton_Click"/>
-            <Button Name="InfosButton" Content="A Propos" Margin="125,402,106,134" Click="InfosButton_Click"/>
-            <TextBlock x:Name="PlayerName" Text="" Margin="86,568,194,10" RenderTransformOrigin="0.459,4.759"/>
-            <TextBlock x:Name="Score" Text="" Margin="317,568,18,10" RenderTransformOrigin="0.459,4.759"/>
+            <TextBlock Text="Principe du jeu" FontSize="42" Margin="0,0,0,549"/>
+            <TextBlock Text="Bla bla bla" FontSize="30" Margin="0,63,0,410"/>
+            <TextBlock Text="Objectifs" FontSize="42" Margin="0,193,0,356"/>
+            <TextBlock Text="Bla bla bla" FontSize="30" Margin="0,251,0,222"/>
+            <TextBlock Text="Classement" FontSize="42" Margin="0,385,0,164"/>
+            <TextBlock Text="Bla bla bla" FontSize="30" Margin="0,443,0,30"/>
         </Grid>
     </Grid>
 
