--- a/SearchShot/SearchShot/Pages/StreamPage.xaml
+++ b/SearchShot/SearchShot/Pages/StreamPage.xaml
@@ -1,4 +1,4 @@
-﻿<phone:PhoneApplicationPage
+<phone:PhoneApplicationPage
     x:Class="SearchShot.StreamPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -14,26 +14,51 @@
     SupportedOrientations="Portrait" Orientation="Portrait"
     shell:SystemTray.IsVisible="False">
 
-    <Grid x:Name="LayoutRoot" Margin="0,0,0,-71">
+    <!--<Grid x:Name="LayoutRoot" Margin="0,0,0,-71">
         <Grid.Background>
             <ImageBrush ImageSource="/Assets/Graphics/background.png" Stretch="UniformToFill"/>
         </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+        </Grid.RowDefinitions>-->
+        <StackPanel x:Name="TitlePanel" >
+            <TextBlock Text="Niveaux"  HorizontalAlignment="Left"/>
 
-        <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock Text="App"  HorizontalAlignment="Left" Margin="4,0,0,0"/>
-        </StackPanel>
+        <!--Doublon des caractéristiques qui marchent
+        <Grid Height="600">
+            <ListBox x:Name="listedesniveaux" SelectionChanged="listedesniveaux_SelectionChanged" VerticalAlignment="Center" >
+            </ListBox>
+            <TextBlock x:Name="selection"  VerticalAlignment="Bottom"></TextBlock>
+            </Grid>
+        -->
+        <Grid Height="800">
+            <Grid.Background>
+                <ImageBrush ImageSource="/Assets/Graphics/fondredimensionneFINAL.jpg"></ImageBrush>
+            </Grid.Background>
+            <ListBox x:Name="listedesniveaux" ScrollViewer.ManipulationMode="Control" SelectionChanged="listedesniveaux_SelectionChanged" VerticalAlignment="Center" >
+                <ListBox.ItemTemplate>
+                    <DataTemplate >
+                        <!-- <StackPanel Orientation="Vertical">
+                            <Image Source="{Binding Image}"  Margin="10 0 0 0" Width="450" Height="300" HorizontalAlignment="Center" Stretch="None" />
+                            <TextBlock Text="{Binding IdNiveau}" Margin="0 100 0 0" Name="Niveau" HorizontalAlignment="Center" FontSize="100" Foreground="#FFFF8F09" FontWeight="Bold"/>
 
-        <Grid x:Name="ContentPanel" Grid.Row="1">
+                        </StackPanel> -->
+                            <Grid>
+                            <Image Source="{Binding Image}"  Margin="10 0 0 0" Width="450" Height="300" HorizontalAlignment="Center" />
+                            <TextBlock Text="{Binding IdNiveau}" Margin="0 100 0 0" Name="Niveau" HorizontalAlignment="Center" FontSize="100" Foreground="#FFFF8F09" FontWeight="Bold"/>
+                            <Image Source="{Binding Avatar}" Margin="25 20 0 0" Width="60" Height="60" HorizontalAlignment="Left" VerticalAlignment="Top" Name="avatar" Hold="Avatar_OnMouseEnter" />
+                            <TextBlock Text="{Binding Speudo}" Margin="20 70 0 0" FontSize="20" Foreground="CornflowerBlue" FontWeight="Bold"></TextBlock>
+                            </Grid> 
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
         </Grid>
 
-        <ProgressBar x:Name="ProgressBar" VerticalAlignment="Top"
-                     Visibility="Collapsed" IsIndeterminate="False"/>
-    </Grid>
+        <ProgressBar x:Name="ProgressBar" VerticalAlignment="Top" Visibility="Collapsed" IsIndeterminate="False"/>
 
+
+        </StackPanel>
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar BackgroundColor="{StaticResource ImageProcessingAppApplicationBarBackgroundColor}"
                               ForegroundColor="{StaticResource ImageProcessingAppApplicationBarForegroundColor}"/>
